--- a/app/views/layouts/authenticated.html.erb
+++ b/app/views/layouts/authenticated.html.erb
@@ -23,7 +23,7 @@
   <%= render 'layouts/dark_mode_toggle' %>
 
   <body class="dark:bg-gray-900">
-    <%= render 'layouts/nav_bar' %>
+    <%= render Shared::NavBarComponent.new(user: current_or_guest_user) %>
     <div class="flex pt-16 overflow-hidden bg-gray-50 dark:bg-gray-900">
 
     <div id="main-content" class="relative w-full max-w-screen-2xl mx-auto h-full overflow-y-auto bg-gray-50 dark:bg-gray-900">
