--- a/app/components/shared/nav_bar_component.html.erb
+++ b/app/components/shared/nav_bar_component.html.erb
@@ -9,18 +9,14 @@
                 <!-- Desktop menu -->
                 <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1">
                     <ul class="flex flex-col mt-4 space-x-6 text-sm font-medium lg:flex-row xl:space-x-8 lg:mt-0">
-                        <li>
-                            <a href="<%= root_url %>" class="block rounded text-primary-700 dark:text-primary-500" aria-current="page">Dashboard</a>
-                        </li>
-                        <li>
-                            <%= demo_or_real_public_page_link %>
-                            <a target="_blank" href="<%= user.handle ? public_page_url(user.handle) : '#' %>" class="block rounded text-primary-700 dark:text-primary-500" aria-current="page">My Public Page</a>
-                        </li>
-                        <li>
-                            <a href="<%= edit_user_registration_path %>" class="block text-gray-700 hover:text-primary-700 dark:text-gray-400 dark:hover:text-white">My Profile & Settings</a>
-                        </li>
+                    <% nav_links.each do |link| %>
+                    <li>
+                      <%= link_to link[:name], link[:path], class: 'block text-gray-700 hover:text-primary-700 dark:text-gray-400 dark:hover:text-white' %>
+                    </li>
+                    <% end %>
                     </ul>
                 </div>
+                <!-- End Desktop menu -->
             </div>
             <div class="flex justify-between items-center lg:order-2">
                 <%# render 'layouts/notifications' %>
@@ -34,7 +30,7 @@
                     <% end %>
 
                 </button>
-                <!-- Dropdown menu -->
+                <!-- User Menu Dropdown menu -->
                 <div class="hidden z-50 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600" id="userMenuDropdown">
                     <div class="py-3 px-4">
                         <span class="block text-sm font-semibold text-gray-900 dark:text-white"><%= user.name %></span>
@@ -50,6 +46,7 @@
                         </li>
                     </ul>
                 </div>
+                <!-- End User Menu menu -->
 
                 <button type="button" id="toggleMobileMenuButton" data-collapse-toggle="toggleMobileMenu" class="items-center p-2 text-gray-500 rounded-lg md:ml-2 lg:hidden hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600">
                     <span class="sr-only">Open menu</span>
@@ -61,32 +58,12 @@
     <nav class="bg-white dark:bg-gray-900">
         <!-- Mobile menu -->
         <ul id="toggleMobileMenu" class="hidden flex-col mt-0 pt-16 w-full text-sm font-medium lg:hidden">
-            <li class="block border-b dark:border-gray-700">
-                <a href="#" class="block py-3 px-4 text-gray-900 lg:py-0 dark:text-white lg:hover:underline lg:px-0" aria-current="page">Home</a>
-            </li>
-            <li class="block border-b dark:border-gray-700">
-                <a href="#" class="block py-3 px-4 text-gray-900 lg:py-0 dark:text-white lg:hover:underline lg:px-0">Messages</a>
-            </li>
-            <li class="block border-b dark:border-gray-700">
-                <a href="#" class="block py-3 px-4 text-gray-900 lg:py-0 dark:text-white lg:hover:underline lg:px-0">Profile</a>
-            </li>
-            <li class="block border-b dark:border-gray-700">
-                <a href="#" class="block py-3 px-4 text-gray-900 lg:py-0 dark:text-white lg:hover:underline lg:px-0">Settings</a>
-            </li>
-            <li class="block border-b dark:border-gray-700">
-                <button type="button" data-collapse-toggle="dropdownMobileNavbar" class="flex justify-between items-center py-3 px-4 w-full text-gray-900 lg:py-0 dark:text-white lg:hover:underline lg:px-0">Dropdown <svg class="w-6 h-6 text-gray-500 dark:text-gray-400" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg></button>
-                <ul id="dropdownMobileNavbar" class="hidden">
-                    <li class="block border-t border-b dark:border-gray-700">
-                        <a href="#" class="block py-3 px-4 text-gray-900 lg:py-0 dark:text-white lg:hover:underline lg:px-0">Item 1</a>
-                    </li>
+                      <% nav_links.each do |link| %>
                     <li class="block border-b dark:border-gray-700">
-                        <a href="#" class="block py-3 px-4 text-gray-900 lg:py-0 dark:text-white lg:hover:underline lg:px-0">Item 2</a>
+                      <%= link_to link[:name], link[:path], class: 'block py-3 px-4 text-gray-900 lg:py-0 dark:text-white lg:hover:underline lg:px-0' %>
                     </li>
-                    <li class="block">
-                        <a href="#" class="block py-3 px-4 text-gray-900 lg:py-0 dark:text-white lg:hover:underline lg:px-0">Item 3</a>
-                    </li>
-                </ul>
-            </li>
+                    <% end %>
         </ul>
+        <!-- End Mobile menu -->
     </nav>
   </header>
