--- a/app/components/dashboard_component.html.erb
+++ b/app/components/dashboard_component.html.erb
@@ -3,10 +3,12 @@
     To start leveraging the full capabilities of Echosight, please complete the steps below:
   </div>
 <% end %>
+  <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">MORE INFO HERE ABOUT WHY DEMO PAGE IS SHOWING</p>
 
 <% if current_user.connected_to_twitter? %>
   <%= render Shared::HeadingComponent.new(text: 'When can I see my public page?', heading_type: :h2) %>
   <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">Thanks for connecting your Twitter/X account. In order to show you your public page we need at least 3 days, ideally 7, of data from Twitter.</p>
+
 <% else %>
   <div class="py-3" role="alert">
     <p class="mb-3 text-gray-500 dark:text-gray-400">To start collecting data from Twitter/X to generate your public page, please connect your Twitter/X account.</p>
