--- a/app/views/public_pages/_top_posts.html.erb
+++ b/app/views/public_pages/_top_posts.html.erb
@@ -34,13 +34,13 @@
                 <th scope="col" class="hidden md:hidden lg:table-cell p-1">
                     Replies
                 </th>
-                <th scope="col" class="md:table-cell p-1">
+                <th scope="col" class="hidden md:table-cell p-1">
                     Impressions
                 </th>
                 <th scope="col" class="md:table-cell p-1">
                     Engagement Rate
                 </th>
-                <th scope="col" class="md:table-cell p-1">
+                <th scope="col" class="hidden md:table-cell p-1">
                     Actions
                 </th>
             </tr>
@@ -63,7 +63,7 @@
                   <td class="hidden md:hidden lg:table-cell p-1">
                       <%= tweet_metric.reply_count %>
                   </td>
-                  <td class="md:table-cell p-1">
+                  <td class="hidden md:table-cell p-1">
                       <%= tweet_metric.impression_count %>
                   </td>
                  <td class="px-6 py-4 relative">
@@ -81,7 +81,7 @@
                     <div class="tooltip-arrow" data-popper-arrow></div>
                   </div>
                 </td>
-                  <td class="px-6 py-4">
+                  <td class="hidden px-6 py-4">
                     <a href="https://twitter.com/user/status/<%= tweet_metric.tweet.twitter_id %>" target="_blank" class="text-blue-600 hover:text-blue-900">
                       <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 18">
                           <path d="M17 0h-5.768a1 1 0 1 0 0 2h3.354L8.4 8.182A1.003 1.003 0 1 0 9.818 9.6L16 3.414v3.354a1 1 0 0 0 2 0V1a1 1 0 0 0-1-1Z"></path>
