--- a/app/views/public_pages/_impressions_over_time.html.erb
+++ b/app/views/public_pages/_impressions_over_time.html.erb
@@ -18,7 +18,7 @@
 
 <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
 <% if impression_daily_data_points_for_graph.count < 2 %>
-   <p class="text-gray-700 dark:text-gray-300">We are awaiting more data to show the followers graph.</p>
+   <p class="text-gray-700 dark:text-gray-300">We are awaiting more data to show the impressions graph.</p>
   <% else %>
     <div id="impressions-chart"></div>
   <% end %>
