--- a/app/components/shared/button_component.html.erb
+++ b/app/components/shared/button_component.html.erb
@@ -1,5 +1,11 @@
+<%
+
+# Consider replacing with <%- link_to @text, @url, class: "#{classes}", data: { turbo: false }, method: :get %>
+
+%>
+
 <%= button_to @url, data: { turbo: false } do %>
-  <button type="submit" class="w-full px-5 py-3 text-base font-medium text-center text-blue-100 transition duration-150 ease-in-out bg-blue-500 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-4 focus:ring-blue-300">
+  <button type="submit" class="<%=classes %>">
     <%= @text %>
   </button>
 <% end %>
