--- a/app/components/shared/heading_component.html.erb
+++ b/app/components/shared/heading_component.html.erb
@@ -1,1 +1,1 @@
-<<%= @heading_type.to_s %> class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white flex items-center"><%= @text %></<%= @heading_type.to_s %>>
+<<%= @heading_type.to_s %> class="<%= classes %>"><%= @text %></<%= @heading_type.to_s %>>
