--- a/app/components/shared/button_component.html.erb
+++ b/app/components/shared/button_component.html.erb
@@ -1,8 +1,4 @@
-<%
-
-# Consider replacing with <%- link_to @text, @url, class: "#{classes}", data: { turbo: false }, method: :get %>
-
-%>
+<% # Consider replacing with <%- link_to @text, @url, class: "#{classes}", data: { turbo: false }, method: :get %>
 
 <%= button_to @url, data: { turbo: false } do %>
   <button type="submit" class="<%=classes %>">
