--- a/app/components/shared/button_component.html.erb
+++ b/app/components/shared/button_component.html.erb
@@ -5,3 +5,6 @@
     <%= @text %>
   </button>
 <% end %>
+
+<!-- hack for dynamically injecting classes into component -->
+<!-- w-full px-5 py-3 text-base font-medium text-center text-blue-100 transition duration-150 ease-in-out bg-blue-500 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-4 focus:ring-blue-300 -->
