Add demo teaser test to sign up message

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,8 @@
         </h2>
 
         <p class="paragraph-base">We are currently in private beta. Join the waiting list and we will notify you when we are ready to launch.</p>
+
+        <p class="paragraph-base">While you wait, why dont you check out our <%= link_to "demo page", public_page_path(:demo), target: "_blank" %> to see what your public page will look like.</p>
         <%
 =begin%>
  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
