--- a/app/components/public_page_component.html.erb
+++ b/app/components/public_page_component.html.erb
@@ -1,4 +1,4 @@
-  <% content_for :title, "#{page_user_handle}'s Public Page" %>
+  <% content_for :title, "#{page_user_name || page_user_handle}'s Public Page" %>
 
   <%= content_for :profile_container do %>
   <div class="profile-container">
