--- a/app/components/public_page_component.html.erb
+++ b/app/components/public_page_component.html.erb
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <div class="py-2 px-4 rounded-lg">
+    <div class="py-2 px-4 rounded-lg" data-test="user-profile">
       <h1 class="text-xl font-bold text-gray-900 dark:text-white"><%= page_user_name %></h1>
       <div class="text-xs dark:text-white lg:mb-3">@<%= page_user_handle %></div>
       <div class="text-m dark:text-white dark:text-white"><%= page_user_twitter_bio %></div>
