--- a/app/views/public_pages/_impressions_over_time.html.erb
+++ b/app/views/public_pages/_impressions_over_time.html.erb
@@ -11,7 +11,7 @@
   </h2>
 </div>
 <div id="impressions-over-time-tooltip" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
-    We collect new impression data each day if your graph isn't showing enough data yet, it's because we are waiting for more data to be available. We will show up to <%= @maximum_days_of_data %> days of data. <%= @first_impressions_message %>
+    We collect new impression data each day if your graph isn't showing enough data yet, it's because we are waiting for more data to be available. We will show up to <%= @maximum_days_of_data %> days of data.
     <div class="tooltip-arrow" data-popper-arrow></div>
 </div>
 
