Extract remaining tooltips to component

--- a/app/components/shared/metrics_card_component.html.erb
+++ b/app/components/shared/metrics_card_component.html.erb
@@ -20,7 +20,5 @@
   </div>
 </div>
 <% if @tooltip_target.present? %>
-  <!-- Example usage in another view -->
-  <%= render Shared::TooltipComponent.new(id: @tooltip_target, text: @tooltip_text, classes: 'custom-class') %>
-
+  <%= render Shared::TooltipComponent.new(id: @tooltip_target, text: @tooltip_text) %>
 <% end %>
