--- a/app/views/public_pages/_engagement_rate.html.erb
+++ b/app/views/public_pages/_engagement_rate.html.erb
@@ -10,10 +10,9 @@
     </span>
   </h2>
 </div>
-<div id="engagement-tooltip" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
-    We collect new engagement data each day if your graph isn't showing enough data yet, it's because we are waiting for more data to be available. We will show up to <%= @maximum_days_of_data %> days of data.
-    <div class="tooltip-arrow" data-popper-arrow></div>
-</div>
+<% tooltip_text = "We collect new engagement data each day if your graph isn't showing enough data yet, it's because we are waiting for more data to be available. We will show up to #{maximum_days_of_data} days of data.
+    <div class=\"tooltip-arrow\" data-popper-arrow></div>".html_safe %>
+<%= render Shared::TooltipComponent.new(id: 'engagement-tooltip', text: tooltip_text) %>
 
 <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
   <% if engagement_rate_percentage_per_day.count < 2 || engagement_rate_percentage_per_day.all? { |data| data[:engagement_rate_percentage].zero? } %>
