tooltip size fixes

--- a/app/components/shared/tooltip_component.html.erb
+++ b/app/components/shared/tooltip_component.html.erb
@@ -1,4 +1,4 @@
 <!-- app/components/shared/tooltip_component.html.erb -->
-<div role="tooltip" class="<%= classes %>" id="<%= id %>">
+<div role="tooltip" class="<%= classes %> max-w-xs md:max-w-sm lg:max-w-md xl:max-w-lg 2xl:max-w-xl" id="<%= id %>">
   <%= @text %>
 </div>
