Simplify tooltip information

--- a/app/views/public_pages/_engagement_rate.html.erb
+++ b/app/views/public_pages/_engagement_rate.html.erb
@@ -10,7 +10,7 @@
     </span>
   </h2>
 </div>
-<% tooltip_text = "We collect new engagement data each day if your graph isn't showing enough data yet, it's because we are waiting for more data to be available. We will show up to #{maximum_days_of_data} days of data.
+<% tooltip_text = "We collect new engagement data each day if your graph isn't showing enough data yet, it's because we are waiting for more data to be available. We will show up to 7 days of data.
     <div class=\"tooltip-arrow\" data-popper-arrow></div>".html_safe %>
 <%= render Shared::TooltipComponent.new(id: 'engagement-tooltip', text: tooltip_text) %>
 
