--- a/app/views/public_pages/_top_posts.html.erb
+++ b/app/views/public_pages/_top_posts.html.erb
@@ -11,7 +11,7 @@
   </h2>
 </div>
 
-<% tooltip_text = "We show the top posts from the last #{maximum_days_of_data} days showing the highest impressions first" %>
+<% tooltip_text = "We show the top posts from the last 7 days." %>
 <%= render Shared::TooltipComponent.new(id: "top-posts-tooltip", text: tooltip_text) %>
 
 <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
