HTML validation fixes

--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -5,7 +5,7 @@
 
   <% resource.class.invite_key_fields.each do |field| -%>
     <div class="field">
-      <%= f.label field %><br />
+      <%= f.label field %><br>
       <%= f.text_field field %>
     </div>
   <% end -%>
