--- a/app/views/admin/users/invite_user.html.erb
+++ b/app/views/admin/users/invite_user.html.erb
@@ -11,7 +11,7 @@ resource_name = resource.class.to_s.underscore
 
         <% resource.class.invite_key_fields.each do |field| -%>
           <div class="field">
-            <%= f.label field %><br />
+            <%= f.label field %><br>
             <%= f.text_field field %>
           </div>
         <% end -%>
