--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -10,12 +10,12 @@
 
           <% if f.object.class.require_password_on_accepting %>
             <div>
-              <%= f.label :password %><br />
+              <%= f.label :password %><br>
               <%= f.password_field :password %>
             </div>
 
             <div>
-              <%= f.label :password_confirmation %><br />
+              <%= f.label :password_confirmation %><br>
               <%= f.password_field :password_confirmation %>
             </div>
 
