--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <%= render 'shared/analytics' %>
     <title><%= content_for?(:title) ? yield(:title) : "Echosight" %></title>
     <%= favicon_link_tag 'favicon.ico' %>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= render('shared/meta') %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
